Rename clashing role names

BUG: 311865
FIXED-IN: 0.6